--- a/day-09/index.html
+++ b/day-09/index.html
@@ -13,6 +13,10 @@
         <li class="list">jackfrout</li>
         <li class="list">watermelon</li>
     </div>
+    <ul id="unoder-list">
+
+    </ul>
+    <p id="delete">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores earum, ex dolorem assumenda nam neque.1</p>
 </body>
 <script src="day-09.js"></script>
 </html>
