--- a/day-09/index.html
+++ b/day-09/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 09</title>
+    <style>
+        .singleLine{
+            color: blue;
+        }
+    </style>
 </head>
 <body id="body">
     <div>
@@ -17,6 +22,10 @@
 
     </ul>
     <p id="delete">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores earum, ex dolorem assumenda nam neque.1</p>
+   <img src="" id="myimg" alt="" sizes="" srcset="">
+   <h2 id="hare">Hi i am hare </h2>
+   <button onclick="hitme()" type="button">ClickMe</button>
+   <div class="round">new</div>
 </body>
 <script src="day-09.js"></script>
 </html>
