--- a/day-09/index.html
+++ b/day-09/index.html
@@ -8,6 +8,12 @@
         .singleLine{
             color: blue;
         }
+        .round{
+            width: 200px;
+            height: 200px;
+            background-color:red;
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body id="body">
@@ -25,7 +31,7 @@
    <img src="" id="myimg" alt="" sizes="" srcset="">
    <h2 id="hare">Hi i am hare </h2>
    <button onclick="hitme()" type="button">ClickMe</button>
-   <div class="round">new</div>
+   <div class="round" id="round"></div>
 </body>
 <script src="day-09.js"></script>
 </html>
