--- a/day-10/index.html
+++ b/day-10/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day-10</title>
+    <style>
+        #hitme{
+            display: block;
+            margin-bottom: 20px;
+        }
+        #box{
+            width: 200px;
+            height: 200px;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <p id="change">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eveniet ratione voluptas, quidem fugiat aut officia vitae assumenda amet necessitatibus!</p>
     <button type="button" id="hitme">Click Me </button>
+    <img ondblclick="hit()"id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXTPuiJmJPHb-4ES2ESNMTU61N2Y1-vANe2w&s" alt="" srcset="">
+    <div id="box">
+
+    </div>
+    <script src="day-10.js"></script>
 </body>
 </html>
