--- a/day-10/index.html
+++ b/day-10/index.html
@@ -40,14 +40,23 @@
     <p id="press"></p>
     <div>
         <h2> put your Information</h2>
-        <form action="" id="form">
+        <form action="" id="form" >
             <label for="firstname">FirstName:</label>
             <input type="text" name="firstname" id="first-name">
             <label for="lastname">LirstName:</label>
             <input type="text" name="lasttname" id="last-name">
+            <input type="submit" value="Create Name">
         </form>
         <p id="name"></p>
     </div>
+    <label for="mySelect">Choose an option:</label>
+    <select id="mySelect">
+        <option value="Option 1">Option 1</option>
+        <option value="Option 2">Option 2</option>
+        <option value="Option 3">Option 3</option>
+    </select>
+
+    <p id="output">Selected option will appear here.</p>
     <script src="day-10.js"></script>
 </body>
 
