--- a/day-10/index.html
+++ b/day-10/index.html
@@ -57,6 +57,13 @@
     </select>
 
     <p id="output">Selected option will appear here.</p>
+    <button type="button" id="btn">Add new itme</button>
+    <ul id="list">
+        <li class="list">apple</li>
+        <li class="list">orang</li>
+        <li class="list">jackfrout</li>
+        <li class="list">watermelon</li>
+    </ul>
     <script src="day-10.js"></script>
 </body>
 
